Added header and footer

--- a/spa/public/index.html
+++ b/spa/public/index.html
@@ -21,7 +21,11 @@
       Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
-    -->
+  -->
+
+  <script
+    src="https://www.paypal.com/sdk/js?client-id=AZz36aUP6plq9Bo2-CuxB1CbHM0cWGlGTkP6w0IHc9mY813b2q1zUOCLHSB-jY9ronZnAazIzj7NoFfQ&currency=USD"></script>
+
   <title>React App</title>
 </head>
 
